[tool.poetry]
name = "reloadium"
version = "0.1.0"
description = ""
authors = ["Damian Krystkiewicz <damian@reloadware.com>"]

[tool.poetry.dependencies]
python = ">=3.6.2, <4.0"
rhei = "^0.5.2"
envo = "^1.2.1"
auditwheel = "^5.1.2"
build = "^0.7.0"
astunparse = "^1.6.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
isort = "^5.7.0"
pyte = "^0.8.0"
pytest-ordering = "^0.6"
nuitka = "^0.6.14"
stickybeak = "^0.9.2"
pytest-xdist = "^2.3.0"
pytest-mock = "^3.6.1"
types-setuptools = "^57.0.2"
untangle = "^1.1.1"
Jinja2 = "^3.0.1"
flaky = "^3.7.0"
pytest-timeout = "^2.0.1"
requests = "^2.26.0"
mypy = "^0.910"
re-assert = "^1.1.0"

[tool.poetry.scripts]
reloadium = "reloadium.reloader:shell_start"

[tool.isort]
profile = "black"
indent = '    '
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
skip_gitignore = "True"
include_trailing_comma = "True"
force_sort_within_sections = "True"
forced_separate = "True"
line_length = 120
skip = [".venv", "reloader/vendored", "tests/vendored", "__obfuscated__",
        "templates", "env_*", "reloader/const.py"]

[tool.black]
target-version = ['py36', 'py37', 'py38', 'py39']
line-length = 120
exclude = '''
^/(
    | reloader/vendored
    | tests/vendored
    | __obfuscated__
    | templates
    | env_.*
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
